[gd_scene load_steps=7 format=2]

[ext_resource path="res://Fonts/xolonium-regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://HUD.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 44
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="GameOverText" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -130.0
margin_top = -26.5
margin_right = 130.0
margin_bottom = 26.5
custom_fonts/font = SubResource( 1 )
text = "Game Over"
align = 1

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -59.42
margin_top = 130.5
margin_right = 59.5802
margin_bottom = 173.5
custom_fonts/font = SubResource( 2 )
text = "START"

[node name="RestartPauseTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="LifeCounter" type="Label" parent="."]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -40.0
margin_right = 43.0
custom_fonts/font = SubResource( 3 )
text = "Lives: "

[node name="ScoreCounter" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -65.0
margin_right = 65.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 4 )
text = "Score: "
align = 1

[node name="WinText" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -133.5
margin_top = -30.0
margin_right = 133.5
margin_bottom = 30.0
custom_fonts/font = SubResource( 3 )
text = "You Did it!"
align = 1

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
